--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@reduxjs/toolkit": "^1.9.5",
     "next": "^13.4.1",
     "react": "^18.2.0",
@@ -18,9 +20,13 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.1",
+    "jest": "^29.5.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
